# gapless-deribit-clickhouse

./: .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  .releaserc.yml  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.dbeaver/: data-sources.schema.json
docs/adr/: 2025-12-03-deribit-options-clickhouse-pipeline.md  2025-12-05-trades-only-architecture-pivot.md  2025-12-07-schema-first-e2e-validation.md  2025-12-08-clickhouse-data-pipeline-architecture.md  2025-12-08-clickhouse-naming-convention.md  2025-12-08-mise-pagination-validation.md  2025-12-09-pydantic-dbeaver-config.md  2025-12-10-deribit-options-alpha-features.md  2025-12-10-schema-optimization.md  2025-12-11-e2e-validation-pipeline.md
docs/design/2025-12-03-deribit-options-clickhouse-pipeline/: spec.md
docs/design/2025-12-05-trades-only-architecture-pivot/: spec.md
docs/design/2025-12-07-schema-first-e2e-validation/: spec.md
docs/design/2025-12-08-clickhouse-data-pipeline-architecture/: spec.md
docs/design/2025-12-08-clickhouse-naming-convention/: spec.md
docs/design/2025-12-08-mise-pagination-validation/: spec.md
docs/design/2025-12-09-pydantic-dbeaver-config/: spec.md
docs/design/2025-12-10-deribit-options-alpha-features/: spec.md
docs/design/2025-12-10-schema-optimization/: spec.md
docs/design/2025-12-11-e2e-validation-pipeline/: spec.md
schema/clickhouse/: deribit_ticker_snapshots.yaml  deribit_trades.yaml  options_trades.yaml  spot_prices_dict.sql
scripts/: generate_dbeaver_config.py  measure_baseline_costs.py  monitor_egress.py  poc_backfill.py  publish-to-pypi.sh  validate_dbeaver_config.py
src/gapless_deribit_clickhouse/: __init__.py  api.py  exceptions.py  probe.py
src/gapless_deribit_clickhouse/billing/: __init__.py  aws_cost_explorer.py  clickhouse_cloud.py
src/gapless_deribit_clickhouse/clickhouse/: __init__.py  config.py  connection.py
src/gapless_deribit_clickhouse/collectors/: __init__.py  ticker_collector.py  trades_collector.py
src/gapless_deribit_clickhouse/config/: __init__.py  connections.py
src/gapless_deribit_clickhouse/features/: __init__.py  config.py  contract_selector.py  dte_buckets.py  egarch.py  greeks.py  iv_percentile.py  moneyness.py  pcr.py  (+3 more)
tests/: __init__.py  conftest.py  test_api.py  test_instrument_parser.py
tests/contracts/: __init__.py  test_schema_contracts.py
tests/e2e/: conftest.py  test_full_roundtrip.py
tests/features/: __init__.py  test_config.py  test_contract_selector.py  test_greeks.py  test_phase1.py
tests/unit/: test_pagination_validation.py
tests/validation/: __init__.py  test_data_quality.py  test_infrastructure.py  test_reporter.py
(+10 files in other folders)
