# ADR: 2025-12-03-deribit-options-clickhouse-pipeline
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gapless-deribit-clickhouse"
version = "2.2.0"
description = "Deribit options data pipeline with ClickHouse storage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Terry Li" }]
keywords = ["deribit", "options", "clickhouse", "trading", "data-pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "httpx>=0.28.0",
    "numpy>=1.24.0,<2.0.0",  # Pinned for alpha-forge compatibility
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "tenacity>=9.0.0",
    "clickhouse-connect>=0.9.0,<0.10.0",  # Latest stable: 0.9.2
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
# ADR: 2025-12-10-deribit-options-alpha-features
features = [
    "arch>=8.0.0",              # EGARCH volatility modeling
    "py-vollib-vectorized",     # Greeks calculation (Phase 2)
    "scipy>=1.10.0",            # Interpolation for spot gaps
    "gapless-crypto-clickhouse>=8.0.0",  # Spot price data (Phase 2)
]

[project.urls]
Repository = "https://github.com/Eon-Labs/gapless-deribit-clickhouse"

[tool.hatch.build.targets.wheel]
packages = ["src/gapless_deribit_clickhouse"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (network calls)",
    "e2e: marks tests as end-to-end (requires credentials)",
    "contracts: marks tests as contract validation",
]
addopts = ["-v", "--strict-markers", "--tb=short"]

# ADR: 2025-12-05-trades-only-architecture-pivot - mypy strict config
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]
